--- a/src/stylesheets/Style.scss
+++ b/src/stylesheets/Style.scss
@@ -25,7 +25,7 @@ $main-color: #D10024;
 
 body {
     font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
+    // font-weight: 400;
     color: #333;
 }
   
