maquetado del listado de productos (cards) en la vista Home

--- a/src/stylesheets/Product.scss
+++ b/src/stylesheets/Product.scss
@@ -124,7 +124,11 @@
             padding: 0.5rem;
             width: 10rem;
             border-radius: 1.5rem;
-            text-transform: uppercase;  
+            text-transform: uppercase; 
+            text-align: center; 
+            display: flex;
+            justify-content: center;
+            align-items: center;
             transition: 0.2s all;           
         }
 
@@ -132,11 +136,19 @@
             background-color: white;
             color: Style.$main-color;
             cursor: pointer;
-            transition: 0.2s all; 
-            
-          }
-    }   
+            transition: 0.2s all;             
+        }
 
+        .addtocart__icon {
+            font-size: 1.5rem;
+            text-align: center;
+            margin: 0;
+            margin-right: 0.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    }   
 }
 
 .product__card:hover {
