--- a/src/stylesheets/Style.scss
+++ b/src/stylesheets/Style.scss
@@ -11,10 +11,10 @@ Fonts: Montserrat
 
 */
 
-@import "fontawesome-free-6.1.1-web/scss/fontawesome.scss";
-@import "fontawesome-free-6.1.1-web/scss/solid.scss";
-@import "fontawesome-free-6.1.1-web/scss/brands.scss";
-@import "fontawesome-free-6.1.1-web/scss/regular.scss";
+// @import "fontawesome-free-6.1.1-web/scss/fontawesome.scss";
+// @import "fontawesome-free-6.1.1-web/scss/solid.scss";
+// @import "fontawesome-free-6.1.1-web/scss/brands.scss";
+// @import "fontawesome-free-6.1.1-web/scss/regular.scss";
 
 $background-color: rgb(21,22,29);
 $main-color: #D10024;
@@ -24,7 +24,7 @@ $main-color: #D10024;
 -------------------*/
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    // font-family: 'Montserrat', sans-serif;
     // font-weight: 400;
     color: #333;
 }
