Estandarizacion de colors en las hojas de estilo

--- a/src/stylesheets/Navbar.scss
+++ b/src/stylesheets/Navbar.scss
@@ -12,7 +12,7 @@
     align-items: center;
     padding-left: 2rem;
     border-bottom: 0.1rem solid;
-    border-color: rgb(221, 221, 221);
+    border-color: Style.$lightgrey;
     // background-color: rgb(221, 221, 221);
 
     .navbar__filter {
@@ -78,8 +78,8 @@
     
         .searchbar__select {
             padding: 0px 15px;
-            background: #FFF;
-            border: 1px solid #E4E7ED;
+            background: white;
+            border: 1px solid Style.$lightgrey;
             height: 40px;
             border-radius: 40px 0px 0px 40px;            
         }
@@ -87,16 +87,17 @@
         .searchbar__input {
             height: 38px;
             padding: 0px 15px;
-            border: 1px solid #E4E7ED;
-            background-color: #FFF;
+            // border: 1px solid #E4E7ED;
+            border: 1px solid Style.$lightgrey;
+            background-color: white;
             width: 100%;
         }
 
         .searchbar__button {
             height: 40px;
             width: 100px;
-            background: #D10024;
-            color: #FFF;
+            background: Style.$main-color;
+            color: white;
             font-weight: 800;
             border: none;
             border-radius: 0px 40px 40px 0px;
@@ -149,8 +150,8 @@
                     text-align: center;
                     border-radius: 50%;
                     font-size: 0.7rem;
-                    color: #FFF;
-                    background-color: #D10024;
+                    color: white;
+                    background-color: Style.$main-color;
                     margin: 0;
                 }
             }
