--- a/src/stylesheets/ProductDetails.scss
+++ b/src/stylesheets/ProductDetails.scss
@@ -34,8 +34,8 @@
 
             .product__sale {
                 border: 0.15rem solid;
-                border-color: #D10024;
-                color: #D10024;
+                border-color: Style.$main-color;
+                color: Style.$main-color;
                 padding:  0.15rem 0.1rem;
                 font-size: 0.8rem;                             
                 width: 3.2rem;
@@ -89,7 +89,7 @@
                 justify-content: center;
                 align-items: center;
                 border: solid 0.1rem;
-                border-color: rgb(221, 221, 221);
+                border-color: Style.$lightgrey;
                 background-color: white; 
                 padding: 0.5rem;
                 font-size: 1.5rem; 
@@ -118,7 +118,7 @@
 
 
             .addtocart__btn {
-                background-color:  Style.$main-color;
+                background-color: Style.$main-color;
                 color: white;
                 border: 0.1rem solid;
                 border-color: Style.$main-color;                
@@ -173,7 +173,7 @@
             margin: 0;
             padding: 0;
             border: solid 0.1rem;
-            border-color: rgb(221, 221, 221);
+            border-color: Style.$lightgrey;
             background-color: white;        
             // box-shadow: 0px 0px 0px 0px #E4E7ED, 0px 0px 0px 1px #E4E7ED;
         
