--- a/src/stylesheets/Home.scss
+++ b/src/stylesheets/Home.scss
@@ -74,6 +74,12 @@ $animationSpeed: 40s;
 	}
 }
 
+.home__title {
+	font-size: 2.5rem;
+	font-weight: bold;
+	margin-bottom: 1rem;
+}
+
 .product__container {
 	display: flex;
 	justify-content: center;
