--- a/src/stylesheets/Footer.css
+++ b/src/stylesheets/Footer.css
@@ -2,8 +2,7 @@
 
 Colors:
 	Body 		: #333
-	Headers 	: #2B2D42
-	Primary 	: #D10024
+
 	Dark 		: #15161D ##1E1F29
 	Grey 		: #E4E7ED #FBFBFC #8D99AE #B9BABC
 
@@ -17,28 +16,12 @@ body {
   color: #333;
 }
 
-/*------------
-	Buttons
---------------*/
-.primary-btn {
-  display: inline-block;
-  padding: 12px 30px;
-  background-color: #D10024;
-  border: none;
-  border-radius: 40px;
-  color: #FFF;
-  font-weight: 700;
-  text-align: center;
-  -webkit-transition: 0.2s all;
-  transition: 0.2s all;
-}
-
-.primary-btn:hover, .primary-btn:focus {
-  opacity: 0.9;
-  color: #FFF;
-}
-
 footer {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__main {
   display: flex;
   padding: 0.5rem;
   padding-top: 1.5rem;
@@ -47,21 +30,21 @@ footer {
   border-color: #D10024;
   margin-top: 2rem;
 }
-footer .footer__title {
+.footer__main .footer__title {
   text-transform: uppercase;
   font-weight: bold;
   color: white;
   text-align: left;
 }
-footer p {
+.footer__main p {
   color: grey;
   text-align: justify;
 }
-footer .footer__iconcontainer {
+.footer__main .footer__iconcontainer {
   display: flex;
   align-items: center;
 }
-footer .footer__iconcontainer .icon {
+.footer__main .footer__iconcontainer .icon {
   margin-right: 0.5rem;
   color: #D10024;
 }
@@ -96,6 +79,40 @@ footer .footer__iconcontainer .icon {
   width: 20%;
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.footer__bottom {
+  display: flex;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  text-align: justify;
+  background-color: #23242e;
+  color: #8D99AE;
+}
+.footer__bottom .footer__info {
+  width: 90%;
+}
+.footer__bottom .footer__info .copyright {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer__bottom .footer__info .disclaimer {
+  font-size: 0.8rem;
+}
+.footer__bottom .footer__author {
+  width: 10%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.footer__bottom .footer__author .rnblogo {
+  width: 2rem;
+}
+.footer__bottom .footer__author .link {
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=Footer.css.map */
