--- a/src/stylesheets/Navbar.css
+++ b/src/stylesheets/Navbar.css
@@ -2,8 +2,7 @@
 
 Colors:
 	Body 		: #333
-	Headers 	: #2B2D42
-	Primary 	: #D10024
+
 	Dark 		: #15161D ##1E1F29
 	Grey 		: #E4E7ED #FBFBFC #8D99AE #B9BABC
 
@@ -15,27 +14,6 @@ Fonts: Montserrat
 -------------------*/
 body {
   color: #333;
-}
-
-/*------------
-	Buttons
---------------*/
-.primary-btn {
-  display: inline-block;
-  padding: 12px 30px;
-  background-color: #D10024;
-  border: none;
-  border-radius: 40px;
-  color: #FFF;
-  font-weight: 700;
-  text-align: center;
-  -webkit-transition: 0.2s all;
-  transition: 0.2s all;
-}
-
-.primary-btn:hover, .primary-btn:focus {
-  opacity: 0.9;
-  color: #FFF;
 }
 
 .navbar__wraper {
@@ -108,23 +86,23 @@ body {
 }
 .navbar__top .navbar__searchbar .searchbar__select {
   padding: 0px 15px;
-  background: #FFF;
-  border: 1px solid #E4E7ED;
+  background: white;
+  border: 1px solid rgb(221, 221, 221);
   height: 40px;
   border-radius: 40px 0px 0px 40px;
 }
 .navbar__top .navbar__searchbar .searchbar__input {
   height: 38px;
   padding: 0px 15px;
-  border: 1px solid #E4E7ED;
-  background-color: #FFF;
+  border: 1px solid rgb(221, 221, 221);
+  background-color: white;
   width: 100%;
 }
 .navbar__top .navbar__searchbar .searchbar__button {
   height: 40px;
   width: 100px;
   background: #D10024;
-  color: #FFF;
+  color: white;
   font-weight: 800;
   border: none;
   border-radius: 0px 40px 40px 0px;
@@ -141,6 +119,8 @@ body {
 .navbar__top .navbar__user .user__iconcontainer {
   display: flex;
   flex-direction: column;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .navbar__top .navbar__user .user__iconcontainer .user__link {
   display: block;
@@ -153,7 +133,7 @@ body {
   transition: ease-in-out 0.3s;
 }
 .navbar__top .navbar__user .user__iconcontainer .user__link .user__icon {
-  font-size: 1.3rem;
+  font-size: 1.8rem;
 }
 .navbar__top .navbar__user .user__iconcontainer .user__link .user__icon--title {
   color: white;
@@ -172,7 +152,7 @@ body {
   text-align: center;
   border-radius: 50%;
   font-size: 0.7rem;
-  color: #FFF;
+  color: white;
   background-color: #D10024;
   margin: 0;
 }
