--- a/src/stylesheets/Product.css
+++ b/src/stylesheets/Product.css
@@ -2,8 +2,7 @@
 
 Colors:
 	Body 		: #333
-	Headers 	: #2B2D42
-	Primary 	: #D10024
+
 	Dark 		: #15161D ##1E1F29
 	Grey 		: #E4E7ED #FBFBFC #8D99AE #B9BABC
 
@@ -15,27 +14,6 @@ Fonts: Montserrat
 -------------------*/
 body {
   color: #333;
-}
-
-/*------------
-	Buttons
---------------*/
-.primary-btn {
-  display: inline-block;
-  padding: 12px 30px;
-  background-color: #D10024;
-  border: none;
-  border-radius: 40px;
-  color: #FFF;
-  font-weight: 700;
-  text-align: center;
-  -webkit-transition: 0.2s all;
-  transition: 0.2s all;
-}
-
-.primary-btn:hover, .primary-btn:focus {
-  opacity: 0.9;
-  color: #FFF;
 }
 
 .product__cardwraper {
@@ -84,7 +62,7 @@ body {
 .product__cardwraper .product__header .product__label .new {
   background-color: #D10024;
   border-color: #D10024;
-  color: #FFF;
+  color: white;
   padding: 0.15rem 0.1rem;
   font-size: 0.8rem;
   margin: 0;
