--- a/src/stylesheets/Navbar.scss
+++ b/src/stylesheets/Navbar.scss
@@ -23,6 +23,8 @@
         display: inline-block;
         position: relative;
         padding-bottom: 0.3rem;
+        text-decoration: none;
+        color: black;
     }
 
     .navbar__filter:hover {
