--- a/src/stylesheets/Home.scss
+++ b/src/stylesheets/Home.scss
@@ -74,13 +74,13 @@ $animationSpeed: 40s;
 	}
 }
 
-.home__title {
+.section__title {
 	font-size: 2.5rem;
 	font-weight: bold;
 	margin-bottom: 1rem;
 }
 
-.product__container {
+.salesdiscount__container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
