--- a/src/stylesheets/Product.css
+++ b/src/stylesheets/Product.css
@@ -23,10 +23,8 @@ body {
   margin: 0.8rem;
 }
 .product__cardwraper .product__card {
-  border: solid 0.1rem;
-  border-color: rgb(221, 221, 221);
+  border: solid 0.1rem rgb(221, 221, 221);
   background-color: white;
-  box-shadow: 0px 0px 0px 0px #E4E7ED, 0px 0px 0px 1px #E4E7ED;
   transition: 0.2s all;
 }
 .product__cardwraper .product__header {
@@ -47,8 +45,7 @@ body {
   justify-content: flex-start;
 }
 .product__cardwraper .product__header .product__label .sale {
-  border: 0.15rem solid;
-  border-color: #D10024;
+  border: 0.15rem solid #D10024;
   color: #D10024;
   padding: 0.15rem 0.1rem;
   font-size: 0.8rem;
