--- a/src/stylesheets/Product.scss
+++ b/src/stylesheets/Product.scss
@@ -7,10 +7,8 @@
     margin: 0.8rem;
  
     .product__card {
-        border: solid 0.1rem;
-        border-color: Style.$lightgrey;
-        background-color: white;        
-        box-shadow: 0px 0px 0px 0px #E4E7ED, 0px 0px 0px 1px #E4E7ED;
+        border: solid 0.1rem Style.$lightgrey;   
+        background-color: white;               
         transition: 0.2s all;
     }
 
@@ -33,8 +31,7 @@
             justify-content: flex-start;            
 
             .sale {
-                border: 0.15rem solid;
-                border-color: Style.$main-color;
+                border: 0.15rem solid Style.$main-color;            
                 color: Style.$main-color;
                 padding:  0.15rem 0.1rem;
                 font-size: 0.8rem;
