--- a/src/stylesheets/Store.css
+++ b/src/stylesheets/Store.css
@@ -1,3 +1,98 @@
+/*
 
+Colors:
+	Body 		: #333
+
+	Dark 		: #15161D ##1E1F29
+	Grey 		: #E4E7ED #FBFBFC #8D99AE #B9BABC
+
+Fonts: Montserrat
+
+*/
+/*-----------------
+	Typography
+-------------------*/
+body {
+  color: #333;
+}
+
+.store {
+  padding: 2rem;
+}
+.store .store__wraper {
+  display: flex;
+}
+.store .store__wraper .filter__wraper {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding-left: 1rem;
+  margin-right: 4rem;
+}
+.store .store__wraper .filter__wraper .filter__price {
+  display: flex;
+}
+.store .store__wraper .filter__wraper .filter__price .minmax {
+  box-sizing: border-box;
+  height: 1.5rem;
+  width: 4rem;
+}
+.store .store__wraper .filter__wraper .filter__price p {
+  margin: 0;
+  margin-right: 0.5rem;
+  margin-left: 0.5rem;
+}
+.store .store__wraper .filter__wraper .filter__price .price__icon {
+  margin-left: 0.5rem;
+  font-size: 1.5rem;
+  transition: 0.2s all;
+}
+.store .store__wraper .filter__wraper .filter__price .price__icon:hover {
+  cursor: pointer;
+  color: #D10024;
+  transition: 0.2s all;
+}
+.store .store__pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+.store .store__pagination .button__container {
+  box-sizing: border-box;
+  width: 2.5rem;
+  height: 2.5rem;
+  border: 0.1rem solid;
+  border-color: rgb(221, 221, 221);
+  transition: 0.2s all;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 100;
+}
+.store .store__pagination .button__container .button__icon {
+  color: black;
+  font-size: 1.5rem;
+}
+.store .store__pagination .button__container:hover {
+  background-color: rgb(221, 221, 221);
+  color: white;
+  cursor: pointer;
+  transition: 0.2s all;
+}
+.store .store__pagination .page__number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #D10024;
+  box-sizing: border-box;
+  width: 2.5rem;
+  height: 2.5rem;
+  color: white;
+  font-size: 1.2rem;
+  margin: 0;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
 
 /*# sourceMappingURL=Store.css.map */
